--- a/style.css
+++ b/style.css
@@ -236,13 +236,17 @@ input[type="tel"]{
     width: 50%;
     height: 5vh;
     border-radius: 1rem;
+    border: none;
     padding-left: 2vh;
+    background-color: #f6f5f5e3;
 }
 input[type="email"]{
     width: 50%;
     height: 5vh;
     border-radius: 1rem;
     padding-left: 2vh;
+    border: none;
+    background-color: #f6f5f5e3;
 }
 .nome{
     display: flex;
@@ -260,7 +264,9 @@ input[type="email"]{
 input[type="text"]{
     width: 51.2%;
     border-radius: 1rem;
+    border: none;
     padding-left: 2vh;
+    background-color: #f6f5f5e3;
 }
 input#inome{
     height: 5vh;
@@ -270,7 +276,10 @@ textarea#imsg{
     padding-top: 1.5vh;
     width: 51.2%;
     border-radius: 1rem;
+    border: none;
     padding-left: 2vh;
+    background-color: #f6f5f5e3;
+    
 }
 .enviarbtt{
     display: flex;
@@ -284,7 +293,25 @@ input[type="submit"]{
     border: none;
     height: 5vh;
     cursor: pointer;
+    background-color: #0064e0;
+    color: #ffff;
 
+}
+input[type="text"]:focus {
+  outline: 2px solid #a1a1a1;
+  outline-offset: 0;
+}
+input[type="tel"]:focus {
+  outline: 2px solid #a1a1a1;
+  outline-offset: 0;
+}
+input[type="email"]:focus {
+  outline: 2px solid #a1a1a1;
+  outline-offset: 0;
+}
+textarea:focus {
+  outline: 2px solid #a1a1a1;
+  outline-offset: 0;
 }
 .mapa{
     display: flex;
@@ -294,24 +321,83 @@ input[type="submit"]{
     display: flex;
     justify-content: center;
     width: 100%;
+    gap: 5vh;
+    padding-top: 8vh;
+    padding-bottom: 9vh;
 }
 .mailcont{
     width: 15%;
-    height: 35vh;
+    height: 25vh;
     border-radius: 1rem;
-    background-color: aqua;
+    background-color: #f6f5f5e3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 4vh;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.178);
+    cursor: pointer;
 }
 .linkedincont{
      width: 15%;
-    height: 35vh;
+    height: 25vh;
     border-radius: 1rem;
-    background-color: rgb(255, 0, 170);
+    background-color: #f6f5f5e3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 4vh;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.178);
+    cursor: pointer;
 }
 .instacont{
     width: 15%;
-   height: 35vh;
+   height: 25vh;
    border-radius: 1rem;
-   background-color: rgb(30, 255, 0);
+   background-color: #f6f5f5e3;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-direction: column;   
+    padding-top: 4vh;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.178);
+    cursor: pointer;
+
+}
+.mailcont:hover{
+    transform: scale(1.05);
+}
+.instacont:hover{
+    transform: scale(1.05);
+}
+.linkedincont:hover{
+    transform: scale(1.05);
+}
+
+i#instagram{
+    padding-bottom: 6vh;
+    font-size: 10vh;
+    color: #0064e0;
+}
+i#linkedin{
+    padding-bottom: 6vh;
+    font-size: 9vh;
+    color: #0064e0  ;
+}
+i#envelope{
+    padding-bottom: 6vh;
+    font-size: 9vh;
+    color: #0064e0 ;
+}
+P.textinsta{
+    color: #0064e0;
+}
+p.textlink{
+    color:#0064e0;
+}
+p.textmail{
+   color: #0064e0;
 }
 iframe{
     width: 51.2%;
