--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ li.sessao{
 a{
     text-decoration: none;
     color: black;
+    font-size: 1.7vh;
 }
 .linkmenu{
     position: relative;
@@ -126,6 +127,7 @@ h1.titulocorpo{
     width: 45vw;
     text-align: justify;
     padding-bottom: 3vh;
+    font-size: 2.3vh;
 }
 button.saibamais{
     width: 17vh;
@@ -244,6 +246,7 @@ button.saibamais{
     padding-top: 3vh;
     padding-bottom: 3vh;
     text-align: justify;
+    font-size: 2vh;
 }
 .superiorformacao{
     display: flex;
@@ -317,7 +320,10 @@ button.saibamais{
     width: 30%;
 }
 .labelportugues{
-    font-size: 1em; 
+    font-size: 2vh; 
+}
+.labelingles{
+    font-size: 2vh;
 }
 .portugues{
     display: flex;
@@ -337,8 +343,6 @@ button.saibamais{
 .proficiencia2{
     width: 12vh;
 }
-
-
 .superiorcursos{
     display: flex;
     justify-content: center;
@@ -367,6 +371,15 @@ button.saibamais{
 }
 .voluntariado{
     font-size: 1.6vh;
+}
+.topicocurso{
+    font-size: 2vh;
+}
+li{
+    font-size: 2vh;
+}
+.softtxt{
+    font-size: 2vh;
 }
 /* ------------------------------------------------------------------Tecnologias---------------------------------------------------------- */
 .tecnologias{
@@ -478,6 +491,7 @@ img.imgc{
 .textetech{
     padding-bottom: 2vh;
     padding-top: 2vh;
+    font-size: 2vh;
 }
 .projnetflix{
     display: flex;
@@ -496,6 +510,7 @@ img.imgc{
 .textnet{
     padding-bottom: 2vh;
     padding-top: 2vh;
+    font-size: 2vh;
 }
 .projlogin{
     display: flex;
@@ -514,6 +529,7 @@ img.imgc{
 .textlogin{
     padding-bottom: 2vh;
     padding-top: 2vh;
+    font-size: 2vh;
 }
 /* ---------------------------------------------------------------------contato------------------------------------------------------------ */
 .contato{
@@ -601,6 +617,7 @@ input[type="submit"]{
     cursor: pointer;
     background-color: #0064e0;
     color: #ffff;
+    font-size: 1.7vh;
 
 }
 input[type="text"]:focus {
